src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__csi_b.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): ffffff
01 (C): 

