src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__csi_capital_z.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): 12345678foo234567890
01 (C): 

