src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest1_4.snap
---
source: src/client/panes/grid.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): Test of cursor-control characters inside ESC sequences.                                                       
01 (C): Below should be four identical lines:                                                                         
02 (C):                                                                                                               
03 (C): A B C D E F G H I                                                                                             
04 (C): A B C D E F G H I                                                                                             
05 (C): A B C D E F G H I                                                                                             
06 (C): A B C D E F G H I                                                                                             
07 (C):                                                                                                               
08 (C): Push <RETURN>                                                                                                 
09 (C):                                                                                                               
10 (C):                                                                                                               
11 (C):                                                                                                               
12 (C):                                                                                                               
13 (C):                                                                                                               
14 (C):                                                                                                               
15 (C):                                                                                                               
16 (C):                                                                                                               
17 (C):                                                                                                               
18 (C):                                                                                                               
19 (C):                                                                                                               
20 (C):                                                                                                               
21 (C):                                                                                                               
22 (C):                                                                                                               
23 (C):                                                                                                               
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

