src/client/panes/unit/snapshots/zellij__client__panes__grid__grid_tests__vttest2_0.snap
---
source: src/client/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): **************************************************************************************************************
01 (C): **************************************************                                                            
02 (C): **************************************************************************************************************
03 (C):                                                                                                               
04 (C): This should be three identical lines of *'s completely filling                                                
05 (C): the top of the screen without any empty lines between.                                                        
06 (C): (Test of WRAP AROUND mode setting.)                                                                           
07 (C): Push <RETURN>                                                                                                 
08 (C):                                                                                                               
09 (C):                                                                                                               
10 (C):                                                                                                               
11 (C):                                                                                                               
12 (C):                                                                                                               
13 (C):                                                                                                               
14 (C):                                                                                                               
15 (C):                                                                                                               
16 (C):                                                                                                               
17 (C):                                                                                                               
18 (C):                                                                                                               
19 (C):                                                                                                               
20 (C):                                                                                                               
21 (C):                                                                                                               

